--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ultralytics==8.3.15
-opencv-python==4.10.0.84
-numpy==2.1.1
-gdown==5.2.0
+ultralytics==8.3.15 
+opencv-python-headless==4.10.0.84 
+numpy==2.1.1 
+optree==0.13.0
